use WildFly 8.2 embedded locally and for Jenkins profile use remote WildFly 8.2 server