@@ -11,6 +11,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <version.shrinkwrap.resolvers>2.0.0-alpha-1</version.shrinkwrap.resolvers>
+    <wildfly.version>8.2.0.Final</wildfly.version>
   </properties>
 
     <dependencyManagement>
@@ -84,12 +85,6 @@
       <dependency>
           <groupId>org.jboss.shrinkwrap.resolver</groupId>
           <artifactId>shrinkwrap-resolver-impl-maven-archive</artifactId>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>org.jboss.arquillian.container</groupId>
-          <artifactId>arquillian-openshift</artifactId>
-          <version>1.0.0.Final-SNAPSHOT</version>
           <scope>test</scope>
       </dependency>
       <dependency>
@@ -168,11 +163,45 @@
             </executions>
         </plugin>
         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.8</version>
+            <executions>
+                <execution>
+                    <id>unpack</id>
+                    <phase>process-test-classes</phase>
+                    <goals>
+                        <goal>unpack</goal>
+                    </goals>
+                    <configuration>
+                        <skip>${wildfly.download.skip}</skip>
+                        <artifactItems>
+                            <artifactItem>
+                                <groupId>org.wildfly</groupId>
+                                <artifactId>wildfly-dist</artifactId>
+                                <version>${wildfly.version}</version>
+                                <type>zip</type>
+                                <overWrite>false</overWrite>
+                                <outputDirectory>target</outputDirectory>
+                            </artifactItem>
+                        </artifactItems>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.17</version>
             <configuration>
                 <systemPropertyVariables>
                     <arquillian.launch>jboss-as7-remote</arquillian.launch>
+                    
+                    <!-- For local builds using a JBoss AS container downloaded. -->
+                    <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                    <!-- the maven dependency plugin will have already downloaded the server on /target -->
+                    <jboss.home>${project.basedir}/target/wildfly-${wildfly.version}</jboss.home>
+                    <module.path>${project.basedir}/target/wildfly-${wildfly.version}/modules</module.path>
+                    <javaVmArguments>-Xms1024m -Xmx2048m -XX:PermSize=512M -XX:MaxPermSize=512 -XX:+CMSClassUnloadingEnabled</javaVmArguments>
                 </systemPropertyVariables>
             </configuration>
         </plugin>
@@ -208,13 +237,39 @@
             </activation>
             <properties>
                 <wildfly.config>${user.home}/config</wildfly.config>
+                <wildfly.download.skip>false</wildfly.download.skip>
             </properties>
+
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-embedded</artifactId>
+                    <version>${wildfly.version}</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-embedded</artifactId>
+                    <version>${wildfly.version}</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>jenkins</id>
             <properties>
                 <wildfly.config>${wildfly.config.location}</wildfly.config>
+                <wildfly.download.skip>true</wildfly.download.skip>
             </properties>
+            
+            <dependencies>
+                <dependency>
+                    <groupId>org.jboss.arquillian.container</groupId>
+                    <artifactId>arquillian-openshift</artifactId>
+                    <version>1.0.0.Final-SNAPSHOT</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
         </profile>
     </profiles>
 
